# vanilla

./: .gitignore  .gitmodules  README.md
c++/: .gitignore  Makefile  executable  main.cpp  test.cpp
cpp_cmake/: CMakeLists.txt  Makefile
cpp_cmake/vanilla_app/: CMakeLists.txt  f.cpp  f_test.cpp  main.cpp  test.cpp
cpp_cmake/vanilla_lib/: CMakeLists.txt  f.cpp  f.hpp  f_test.cpp  test.cpp
cpp_cmake/vanilla_lib/include/vanilla_lib/: vanilla_lib.hpp
cpp_cmake/vanilla_qt/: CMakeLists.txt  main.cpp
cpp_cmake/vanilla_qt_py/: CMakeLists.txt  main.cpp  mainwindow.ui  resources.qrc
express/: README.md
express/coffee_jade_stylus/: README.md  package.json
express/coffee_jade_stylus/src/: app.coffee
express/js_ejs_less/: README.md  package.json
express/js_jade_stylus/: README.md  package.json
haskell/vanilla/: Haskeleton.hs  LICENSE.md  Makefile  README.md  vanilla.cabal
haskell/vanilla/benchmark/: Bench.hs  VanillaBench.hs
haskell/vanilla/executable/: Main.hs
haskell/vanilla/test-suite/: VanillaSpec.hs
javascript/: package.json  vanilla.js
javascript/test/: global.coffee  mocha.opts  test.vanilla.js
mac/: .gitconfig  .zshrc  README.md
perl/: README.md  vanilla
perl/test/: tests.pl
python/: Makefile  README.md  vanilla
qt/: CMakeLists.txt  Makefile
qt/source/: CMakeLists.txt  Vanilla.pro  mainwindow.cpp  mainwindow.ui
website/: index.html  vanilla.html
website/scripts/: vanilla.js
website/styles/: vanilla.css
